# 114-pp-final

./: .gitignore  Comparison.md  README.md  bench.sh  pyproject.toml
base/: inference_vit_pytorch.py  inference_vit_pytorch_nvtx.py  profile.md  vit_base.nsys-rep  vit_base_op.nsys-rep
custom/: README.md  note.docx
custom/v0/: bench_sa.py  inference_vit_pytorch_nvtx.py  patch_sa_v0.py  sa.py  sa_ext.cpp  sa_kernel.cu  setup.py  vit_sa_v0.nsys-rep
custom/v0/sa_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custom/v1/: inference_vit_pytorch_nvtx_v1.py  patch_sa_v1.py  sa_v1.py  sa_v1_ext.cpp  sa_v1_kernel.cu  setup.py  vit_sa_v1.nsys-rep
custom/v1/sa_v1_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custom/v2/: inference_vit_pytorch_nvtx_v2.py  patch_sa_v2.py  sa_v2.py  sa_v2_ext.cpp  sa_v2_kernel.cu  setup.py  vit_sa_v2.nsys-rep  vit_sa_v2.sqlite
custom/v2/sa_v2_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custom/v3/: inference_vit_pytorch_nvtx_v3.py  patch_sa_v3.py  sa_v3.py  sa_v3_ext.cpp  sa_v3_kernel.cu  setup.py  vit_sa_v3.nsys-rep
custom/v3/sa_v3_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernel/: REAME.md  custom_softmax.py  setup.py  softmax_kernel.cu  vit_custom.nsys-rep  vit_with_custom_cuda.py  vit_with_custom_cuda_nvtx.py
kernel/custom_cuda_kernels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vit-pytorch/: inference.py
