[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "114-pp-final"
version = "0.1.0"
description = "Project for ViT benchmarking"
requires-python = ">=3.11"

dependencies = [
    "torch",
    "torchvision",
    "vit-pytorch",
    "einops",
    "setuptools",
]

[tool.setuptools]
packages = ["base", "kernel"]
